Fixed spacing issue at bottom of contact page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1014,7 +1014,7 @@ form,
     }
 }
 
-@media screen and (min-height: 600px) {
+@media screen and (min-width: 566px) {
     .contact {
         bottom: 0;
     }
